syntax = "proto3";
package proto;
import "user/user_model.proto";

option go_package = "colab/api/grpc/user";

message OrganizationListRequest {}

message OrganizationListResponse {
  repeated OrganizationInfo list = 1;
}

service OrganizationService {
  rpc GetOrganizationList(OrganizationListRequest) returns (OrganizationListResponse);
}